# innerly

./: .bazelrc  .yamllint.yml  BUILD.bazel  deps.bzl  go.mod  go.sum
src/: BUILD.bazel  main.go
src/db/: BUILD.bazel  argument.go  statement.go  topic.go
src/sample/: BUILD.bazel  veganism.go
